--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -34,7 +35,7 @@
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
