--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./server.js",
   "source": "./server.js",
   "scripts": {
-    "start": "npm run build && (nodemon api/server.js)",
+    "start": "vercel dev",
     "start-Client": "parcel views/index.html --no-cache --port 3000 --open --out-dir dist",
     "build": "parcel build views/index.html --out-dir dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -31,7 +31,6 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-plugin-react-hooks": "0.0.0",
-    "dotenv": "^8.2.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
